2001-10-02  Sam Steingold  <sds@gnu.org>

	* format.lisp (formatter-main-1): fixed quoting (colon-p and
	atsign-p must be under comma)

2001-10-01  Sam Steingold  <sds@gnu.org>

	* pathname.d (make-pathname): support string and
	:wild/:wild-inferiors :directory arg
	support :UP and :BACK in the directory list
	coerce name &c to normal simple string
	(legal_name): accept non-simple strings
	(subst_up_dotdot): new function
	* constsym.d (:UP, :BACK): added

2001-10-01  Sam Steingold  <sds@gnu.org>

	added EXPAND-DEFTYPE primitive, removed TYPE-EXPAND-1
	* lispbibl.d (expand_deftype): added a prototype
	* predtype.d (expand_deftype, EXPAND-DEFTYPE): implemented
	(COERCE): use expand-deftype()
	* constsym.d, subr.d (EXPAND-DEFTYPE): added
	* sequence.d (find_seq_type): new local function
	(valid_type): split into valid_type() and valid_type1(),
	use expand_deftype() and find_seq_type()
	(get_seq_type): use find_seq_type()
	* type.lisp (typep, canonicalize-type, subtype-integer,
	type-expand-1): use EXPAND-DEFTYPE
	(type-expand-1): folded into type-expand
	* describe.lisp (describe-object): do not use type-expand-1

2001-09-24  Sam Steingold  <sds@gnu.org>

	added functionp macro predicate
	* lispbibl.d (functionp): define
	* record.d (MAKE-FUNCTION-MACRO, MAKE-MACRO): use it
	* predtype.d (COERCE): ditto

2001-09-23  Sam Steingold  <sds@gnu.org>

	optional filling of PPHELP streams
	* stream.d (wr_ch_pphelp): when filling, handle spaces specially
	(wr_ch_array_pphelp): split on NL and (when filling) on spaces
	(wr_ch_array_pphel_): renamed from wr_ch_array_pphelp
	* constsym.d (*PRINT-PRETTY-FILL*): added
	* spvw.d (init_symbol_values): defvar *PRINT-PRETTY-FILL*

2001-09-24  Stefan Kain  <stefan.kain@freenet.de>

	* lispbibl.d: translated the rest of the comments

2001-08-12  Bruno Haible  <haible@clisp.cons.org>

	* io.d (a_letterdigit, a_expodigit): New macros.
	(test_potential_number_syntax): Swap step2 and step3. Translate into